# VideoNote

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  package-lock.json
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/spec/guides/: cross-layer-thinking-guide.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-17-ai/: check.jsonl  task.json
.trellis/tasks/05-19-optimize-note/: check.jsonl  task.json
.trellis/tasks/05-21-autosave/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-21-fix-auto-save-interrupts-editing-state-by-remounting-editor/: task.json
.trellis/tasks/05-21-fix-remove-double-layer-container-in-note-editor/: task.json
.trellis/tasks/05-21-ytdlp-cookies-update/: prd.md
backend/: .dockerignore  Dockerfile  pyproject.toml  worker.py
backend/app/: auth.py  config.py  crypto.py  db.py  main.py  schemas.py
backend/app/api/: auth_routes.py  cookie_routes.py  note_routes.py  routes.py
backend/app/services/: audio.py  markdown.py  note_gen.py  subtitle.py  transcribe.py
backend/tests/: test_markdown.py  test_subtitle_ytdlp_opts.py
frontend/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/auth/: api.ts  (+1 more)
(+204 files in other folders)
