[project]
name = "videonote-backend"
version = "0.1.0"
description = "VideoNote backend — FastAPI + asyncio for AI video note generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "yt-dlp>=2025.1.0",
    "openai>=1.60.0",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx[socks]>=0.28.0",
    "pydantic[email]>=2.10.0",
    "python-multipart>=0.0.18",
    "aiosqlite>=0.20.0",
    "pyjwt>=2.12.1",
    "bcrypt>=5.0.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
